Get channel and directory counts from config etc
This involved quite a lot of swizzling around and refactoring.  Oh gods.

--- a/BAPSPresenterNG/Controls/Channel.xaml
+++ b/BAPSPresenterNG/Controls/Channel.xaml
@@ -88,8 +88,7 @@ The main channel control.
              ItemsSource="{Binding TrackList,UpdateSourceTrigger=PropertyChanged}"
              dd:DragDrop.IsDropTarget="True"
              dd:DragDrop.DropHandler="{Binding}"
-             SelectionChanged="TrackList_SelectionChanged" SelectedIndex="{Binding SelectedItemIndex, Mode=OneWay}"
-             >
+             SelectionChanged="TrackList_SelectionChanged"><!--SelectedIndex="{Binding SelectedItemIndex, Mode=OneWay}"-->
             <ListBox.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="_Reset Channel"/>
