--- a/BAPSPresenterNG/App.xaml
+++ b/BAPSPresenterNG/App.xaml
@@ -1,10 +1,14 @@
-<Application x:Class="BAPSPresenterNG.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup" Exit="Application_Exit" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+<Application x:Class="BAPSPresenterNG.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup"
+             Exit="Application_Exit" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d"
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
         <ResourceDictionary>
-            <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Resources/splashIcon.png"/>
+            <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Resources/splashIcon.png" />
 
-            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:BAPSPresenterNG.ViewModel" />
-            
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True"
+                                 xmlns:vm="clr-namespace:BAPSPresenterNG.ViewModel" />
+
             <!-- Colours used throughout BAPS -->
             <SolidColorBrush x:Key="MainBg" Color="#FF002D5A" />
             <SolidColorBrush x:Key="MainFg" Color="White" />
