--- a/BAPSPresenterNG/Controls/Channel.xaml
+++ b/BAPSPresenterNG/Controls/Channel.xaml
@@ -4,7 +4,7 @@ The main channel control.
 <UserControl x:Class="BAPSPresenterNG.Controls.Channel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:conv="clr-namespace:BAPSPresenterNG.Converters"
@@ -12,7 +12,7 @@ The main channel control.
              xmlns:controls="clr-namespace:BAPSPresenterNG.Controls"
              xmlns:dd="urn:gong-wpf-dragdrop"
              xmlns:viewModel="clr-namespace:BAPSPresenterNG.ViewModel"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" Width="360"
              d:DataContext="{d:DesignInstance viewModel:ChannelViewModel}">
     <UserControl.Resources>
@@ -22,28 +22,27 @@ The main channel control.
         <!-- ChannelBarHeight - (2*ChannelBarMargin) -->
         <sys:Double x:Key="ChannelBarHeightMinusMargin">20</sys:Double>
         <!-- Tango colours (for now) -->
-        <SolidColorBrush x:Key="ChannelLegendLampOut" Color="#FF888a85"></SolidColorBrush>
-        <SolidColorBrush x:Key="ChannelLegendLampOn" Color="#FFEEEEEC"></SolidColorBrush>
-        <SolidColorBrush x:Key="ChannelLegendLampAlt" Color="#FFEF2929"></SolidColorBrush>
+        <SolidColorBrush x:Key="ChannelLegendLampOut" Color="#FF888a85" />
+        <SolidColorBrush x:Key="ChannelLegendLampOn" Color="#FFEEEEEC" />
+        <SolidColorBrush x:Key="ChannelLegendLampAlt" Color="#FFEF2929" />
         <!-- Styles -->
         <Style x:Key="ChannelLampStyle" TargetType="{x:Type fa:ImageAwesome}">
-            <Setter Property="Height" Value="{StaticResource ChannelBarHeightMinusMargin}"/>
-            <Setter Property="Width" Value="{StaticResource ChannelBarHeightMinusMargin}"/>
-            <Setter Property="Margin" Value="{StaticResource ChannelBarMargin}"/>
-            <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOut}"/>
+            <Setter Property="Height" Value="{StaticResource ChannelBarHeightMinusMargin}" />
+            <Setter Property="Width" Value="{StaticResource ChannelBarHeightMinusMargin}" />
+            <Setter Property="Margin" Value="{StaticResource ChannelBarMargin}" />
+            <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOut}" />
         </Style>
     </UserControl.Resources>
     <DockPanel>
         <controls:Header
             DockPanel.Dock="Top"
             Icon="Music"
-            Text="{Binding ChannelId, Converter={StaticResource ChannelIdConverter},StringFormat='Channel {0}'}"
-            >
+            Text="{Binding ChannelId, Converter={StaticResource ChannelIdConverter},StringFormat='Channel {0}'}">
             <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
                 <fa:ImageAwesome Icon="Repeat" ToolTip="Repeat mode">
                     <fa:ImageAwesome.Style>
                         <Style TargetType="{x:Type fa:ImageAwesome}"
-                           BasedOn="{StaticResource ChannelLampStyle}">
+                               BasedOn="{StaticResource ChannelLampStyle}">
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding Path=RepeatMode}" Value="All">
                                     <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampAlt}" />
@@ -58,7 +57,7 @@ The main channel control.
                 <fa:ImageAwesome Icon="AngleDoubleDown" ToolTip="Auto Advance">
                     <fa:ImageAwesome.Style>
                         <Style TargetType="{x:Type fa:ImageAwesome}"
-                           BasedOn="{StaticResource ChannelLampStyle}">
+                               BasedOn="{StaticResource ChannelLampStyle}">
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding Path=IsAutoAdvance}" Value="true">
                                     <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
@@ -68,11 +67,11 @@ The main channel control.
                     </fa:ImageAwesome.Style>
                 </fa:ImageAwesome>
                 <fa:ImageAwesome Name="playOnLoadLamp"
-                             Icon="PlayCircleOutline"
-                             ToolTip="Play on load">
+                                 Icon="PlayCircleOutline"
+                                 ToolTip="Play on load">
                     <fa:ImageAwesome.Style>
                         <Style TargetType="{x:Type fa:ImageAwesome}"
-                           BasedOn="{StaticResource ChannelLampStyle}">
+                               BasedOn="{StaticResource ChannelLampStyle}">
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding Path=IsPlayOnLoad}" Value="true">
                                     <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
@@ -83,34 +82,32 @@ The main channel control.
                 </fa:ImageAwesome>
             </StackPanel>
         </controls:Header>
-        <controls:Player DockPanel.Dock="Bottom" DataContext="{Binding Player}"/>
-        <ListBox 
-             ItemsSource="{Binding TrackList,UpdateSourceTrigger=PropertyChanged}"
-             dd:DragDrop.IsDropTarget="True"
-             dd:DragDrop.DropHandler="{Binding}"
-             SelectionChanged="TrackList_SelectionChanged"><!--SelectedIndex="{Binding SelectedItemIndex, Mode=OneWay}"-->
+        <controls:Player DockPanel.Dock="Bottom" DataContext="{Binding Player}" />
+        <ListBox
+            ItemsSource="{Binding TrackList,UpdateSourceTrigger=PropertyChanged}"
+            dd:DragDrop.IsDropTarget="True"
+            dd:DragDrop.DropHandler="{Binding}"
+            SelectionChanged="TrackList_SelectionChanged"><!--SelectedIndex="{Binding SelectedItemIndex, Mode=OneWay}"-->
             <ListBox.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="_Reset Channel"/>
-                    <Separator/>
-                    <MenuItem Header="_Delete Item"/>
-                    <Separator/>
+                    <MenuItem Header="_Reset Channel" />
+                    <Separator />
+                    <MenuItem Header="_Delete Item" />
+                    <Separator />
                     <MenuItem
                         Header="_Auto advance"
                         IsCheckable="True" IsChecked="{Binding IsAutoAdvance, Mode=OneWay}"
-                        Command="{Binding ToggleAutoAdvanceCommand}"
-                        />
+                        Command="{Binding ToggleAutoAdvanceCommand}" />
                     <MenuItem
                         Header="_Play on load"
                         IsCheckable="True" IsChecked="{Binding IsPlayOnLoad, Mode=OneWay}"
-                        Command="{Binding TogglePlayOnLoadCommand}"
-                        />
-                    <Separator/>
-                    <MenuItem Header="Repeat a_ll"/>
-                    <MenuItem Header="Repeat _one"/>
-                    <MenuItem Header="Repeat _none"/>
-                    <Separator/>
-                    <MenuItem Header="_Show audio wall"/>
+                        Command="{Binding TogglePlayOnLoadCommand}" />
+                    <Separator />
+                    <MenuItem Header="Repeat a_ll" />
+                    <MenuItem Header="Repeat _one" />
+                    <MenuItem Header="Repeat _none" />
+                    <Separator />
+                    <MenuItem Header="_Show audio wall" />
                 </ContextMenu>
             </ListBox.ContextMenu>
             <ListBox.ItemTemplate>
@@ -120,7 +117,7 @@ The main channel control.
                             <Style TargetType="{x:Type Grid}">
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding IsLoaded}" Value="True">
-                                        <Setter Property="Background" Value="{StaticResource AccentBg}"/>
+                                        <Setter Property="Background" Value="{StaticResource AccentBg}" />
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
