--- a/BAPSPresenterNG/Controls/TrackBar.xaml
+++ b/BAPSPresenterNG/Controls/TrackBar.xaml
@@ -1,28 +1,27 @@
 ﻿<UserControl x:Class="BAPSPresenterNG.Controls.TrackBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:converters="clr-namespace:BAPSPresenterNG.Converters"
              xmlns:vm="clr-namespace:BAPSPresenterNG.ViewModel"
              xmlns:controls="clr-namespace:BAPSPresenterNG.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              Height="48px" d:DesignWidth="800"
-             d:DataContext="{d:DesignData Source='../DesignData/MarkerSetViewModel.xaml'}"
-             >
+             d:DataContext="{d:DesignData Source='../DesignData/MarkerSetViewModel.xaml'}">
     <UserControl.Resources>
-        <converters:PositionScaleConverter x:Key="PositionScaleConverter"/>
+        <converters:PositionScaleConverter x:Key="PositionScaleConverter" />
     </UserControl.Resources>
-    <Canvas Name="Canvas" d:DataContext="{d:DesignInstance vm:PlayerViewModel, IsDesignTimeCreatable=True}" Background="Black">
+    <Canvas Name="Canvas" d:DataContext="{d:DesignInstance vm:PlayerViewModel, IsDesignTimeCreatable=True}"
+            Background="Black">
         <controls:TrackBarBackground VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                            Position="{Binding Position}"
-                            Duration="{Binding Duration}"
-                            />
+                                     Position="{Binding Position}"
+                                     Duration="{Binding Duration}" />
         <Rectangle Height="24px" VerticalAlignment="Center" Margin="0px 12px" HorizontalAlignment="Left" Fill="Lime">
             <Rectangle.Width>
                 <MultiBinding Converter="{StaticResource PositionScaleConverter}">
                     <Binding Path="PositionScale" />
-                    <Binding ElementName="Canvas" Path="ActualWidth"/>
+                    <Binding ElementName="Canvas" Path="ActualWidth" />
                 </MultiBinding>
             </Rectangle.Width>
         </Rectangle>
@@ -30,7 +29,7 @@
             <Rectangle.Width>
                 <MultiBinding Converter="{StaticResource PositionScaleConverter}">
                     <Binding Path="IntroPositionScale" />
-                    <Binding ElementName="Canvas" Path="ActualWidth"/>
+                    <Binding ElementName="Canvas" Path="ActualWidth" />
                 </MultiBinding>
             </Rectangle.Width>
         </Rectangle>
@@ -38,7 +37,7 @@
             <Rectangle.Width>
                 <MultiBinding Converter="{StaticResource PositionScaleConverter}">
                     <Binding Path="CuePositionScale" />
-                    <Binding ElementName="Canvas" Path="ActualWidth"/>
+                    <Binding ElementName="Canvas" Path="ActualWidth" />
                 </MultiBinding>
             </Rectangle.Width>
         </Rectangle>
