--- a/BAPSPresenterNG/Login.xaml
+++ b/BAPSPresenterNG/Login.xaml
@@ -8,17 +8,17 @@
         Title="Login" Height="240" Width="320"
         ResizeMode="CanResizeWithGrip"
         ShowInTaskbar="False"
-        WindowStartupLocation="CenterOwner"       
+        WindowStartupLocation="CenterOwner"
         DataContext="{Binding Login, Source={StaticResource Locator}}">
     <Window.Resources>
         <ResourceDictionary>
             <Style x:Key="FieldLabel" TargetType="{x:Type Label}">
                 <Setter Property="Margin" Value="12px 0px 6px 0px" />
-                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="VerticalAlignment" Value="Center" />
             </Style>
             <Style x:Key="Field" TargetType="{x:Type Control}">
                 <Setter Property="Margin" Value="6px 8px 8px 8px" />
-                <Setter Property="MinHeight" Value="24px"/>
+                <Setter Property="MinHeight" Value="24px" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
@@ -35,29 +35,35 @@
             <RowDefinition Name="portRow" Height="Auto" />
             <RowDefinition Name="buttonRow" Height="*" />
         </Grid.RowDefinitions>
-        
+
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="5" Background="{DynamicResource MainBg}">
-            <Image Width="128px" Height="128px" Source="{DynamicResource Logo}"/>
+            <Image Width="128px" Height="128px" Source="{DynamicResource Logo}" />
             <TextBlock FontSize="32px" TextAlignment="Center"
                        Foreground="{StaticResource MainFg}"
-                       FontWeight="Bold">BAPS</TextBlock>
+                       FontWeight="Bold">
+                BAPS
+            </TextBlock>
         </StackPanel>
-        
+
         <Label
             Grid.Row="0" Grid.Column="1"
             Style="{StaticResource FieldLabel}"
             Target="{Binding ElementName=usernameTxt}"
-            Name="usernameLbl">_Username:</Label>
+            Name="usernameLbl">
+            _Username:
+        </Label>
         <TextBox
             Grid.Row="0" Grid.Column="2"
             Style="{StaticResource Field}"
             Name="usernameTxt" Text="{Binding Username, Mode=TwoWay}" />
-        
+
         <Label
             Grid.Row="1" Grid.Column="1"
             Style="{StaticResource FieldLabel}"
             Target="{Binding ElementName=passwordTxt}"
-            Name="passwordLbl">_Password:</Label>
+            Name="passwordLbl">
+            _Password:
+        </Label>
         <PasswordBox
             Grid.Row="1" Grid.Column="2"
             Style="{StaticResource Field}"
@@ -67,7 +73,9 @@
             Grid.Row="2" Grid.Column="1"
             Style="{StaticResource FieldLabel}"
             Target="{Binding ElementName=serverTxt}"
-            Name="serverLbl">_Server:</Label>
+            Name="serverLbl">
+            _Server:
+        </Label>
         <TextBox
             Grid.Row="2" Grid.Column="2"
             Style="{StaticResource Field}"
@@ -77,11 +85,13 @@
             Grid.Row="3" Grid.Column="1"
             Style="{StaticResource FieldLabel}"
             Target="{Binding ElementName=portTxt}"
-            Name="portLbl">P_ort:</Label>
+            Name="portLbl">
+            P_ort:
+        </Label>
         <TextBox
             Grid.Row="3" Grid.Column="2" Name="portTxt"
             Style="{StaticResource Field}"
-            Text="{Binding Port, Mode=TwoWay}"/>
+            Text="{Binding Port, Mode=TwoWay}" />
 
         <StackPanel Name="buttonPanel" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3"
                     Orientation="Horizontal" FlowDirection="RightToLeft" VerticalAlignment="Bottom">
