--- a/BAPSPresenterNG/App.xaml
+++ b/BAPSPresenterNG/App.xaml
@@ -1,7 +1,7 @@
 <Application x:Class="BAPSPresenterNG.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup"
-             Exit="Application_Exit" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d"
-             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+             Exit="Application_Exit" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
         <ResourceDictionary>
             <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Resources/splashIcon.png" />
