--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -12,9 +12,10 @@ The main channel control.
              xmlns:converters="clr-namespace:URY.BAPS.Client.Wpf.Converters"
              xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
              xmlns:viewModel="clr-namespace:URY.BAPS.Client.Wpf.ViewModel"
+             xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" Width="360"
-             d:DataContext="{d:DesignInstance viewModel:ChannelViewModel}">
+             d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
     <UserControl.Resources>
         <converters:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
         <Thickness x:Key="ChannelBarMargin">6px</Thickness>
