--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -13,6 +13,7 @@ The main channel control.
              xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
              xmlns:viewModel="clr-namespace:URY.BAPS.Client.Wpf.ViewModel"
              xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
+             xmlns:model="clr-namespace:URY.BAPS.Client.Common.Model;assembly=URY.BAPS.Client.Common"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" Width="360"
              d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
@@ -83,31 +84,55 @@ The main channel control.
             </StackPanel>
         </controls:Header>
         <controls:Player DockPanel.Dock="Bottom" DataContext="{Binding Player}" />
+        <!-- TODO(@MattWindsor91): work out how to make load only happen if selection changed by left-click. -->
         <ListBox
             HorizontalContentAlignment="Stretch"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
             ItemsSource="{Binding TrackList,UpdateSourceTrigger=PropertyChanged}"
             dd:DragDrop.IsDropTarget="True"
             dd:DragDrop.DropHandler="{Binding}"
-            SelectionChanged="TrackList_SelectionChanged"><!--SelectedIndex="{Binding SelectedItemIndex, Mode=OneWay}"-->
+            SelectionChanged="TrackList_SelectionChanged"
+            SelectedIndex="{Binding SelectedIndex, Mode=OneWayToSource}">
             <ListBox.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="_Reset Channel" />
+                    <MenuItem
+                        Header="_Reset Channel"
+                        Command="{Binding ResetPlaylistCommand}"
+                        />
                     <Separator />
-                    <MenuItem Header="_Delete Item" />
+                    <MenuItem Header="_Delete Item"
+                        Command="{Binding DeleteItemCommand}"
+                        />
                     <Separator />
                     <MenuItem
                         Header="_Auto advance"
                         IsCheckable="True" IsChecked="{Binding IsAutoAdvance, Mode=OneWay}"
-                        Command="{Binding ToggleAutoAdvanceCommand}" />
+                        Command="{Binding ToggleAutoAdvanceCommand}"
+                        />
                     <MenuItem
                         Header="_Play on load"
                         IsCheckable="True" IsChecked="{Binding IsPlayOnLoad, Mode=OneWay}"
-                        Command="{Binding TogglePlayOnLoadCommand}" />
+                        Command="{Binding TogglePlayOnLoadCommand}"
+                        />
                     <Separator />
-                    <MenuItem Header="Repeat a_ll" />
-                    <MenuItem Header="Repeat _one" />
-                    <MenuItem Header="Repeat _none" />
+                    <MenuItem
+                        Header="Repeat a_ll"
+                        IsCheckable="True" IsChecked="{Binding IsRepeatAll, Mode=OneWay}"
+                        Command="{Binding SetRepeatModeCommand}"
+                        CommandParameter="{x:Static model:RepeatMode.All}"
+                        />
+                    <MenuItem
+                        Header="Repeat _one"
+                        IsCheckable="True" IsChecked="{Binding IsRepeatOne, Mode=OneWay}"
+                        Command="{Binding SetRepeatModeCommand}"
+                        CommandParameter="{x:Static model:RepeatMode.One}"
+                        />
+                    <MenuItem
+                        Header="Repeat _none"
+                        IsCheckable="True" IsChecked="{Binding IsRepeatNone, Mode=OneWay}"
+                        Command="{Binding SetRepeatModeCommand}"
+                        CommandParameter="{x:Static model:RepeatMode.None}"
+                        />
                     <Separator />
                     <MenuItem Header="_Show audio wall" />
                 </ContextMenu>
